CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

BFG_INIT_PACKAGE(EventTest "0.3.0")

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

ADD_EXECUTABLE(bfgEventTest ${SOURCES} ${HEADERS})

ADD_TEST(NAME EventTest COMMAND bfgEventTest)

SET_TARGET_PROPERTIES(bfgEventTest PROPERTIES OUTPUT_NAME_DEBUG "bfgEventTest_d")

TARGET_LINK_LIBRARIES(bfgEventTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	bfgEventCore
)

INSTALL(TARGETS bfgEventTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
