cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(LoaderTest "0.3.0")

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_EXECUTABLE(bfgLoaderTest ${SOURCES} ${HEADERS})

ADD_TEST(NAME LoaderTest COMMAND bfgLoaderTest)

SET_TARGET_PROPERTIES(bfgLoaderTest PROPERTIES OUTPUT_NAME_DEBUG "bfgLoaderTest_d")

ADD_DEPENDENCIES(bfgCore CoreEnums)

TARGET_LINK_LIBRARIES(bfgLoaderTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	bfgCore
	bfgModel
)

INSTALL(TARGETS bfgLoaderTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
