CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

BFG_INIT_PACKAGE(ModelTest "0.3.0")

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR}) # <Core/ExternalTypes.h>
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK)

ADD_EXECUTABLE(bfgModelTest ${SOURCES} ${HEADERS})

SET_TARGET_PROPERTIES(bfgModelTest PROPERTIES OUTPUT_NAME_DEBUG "bfgModelTest_d")

TARGET_LINK_LIBRARIES(bfgModelTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	${OGRE_LIBRARIES}
	bfgModel
)

INSTALL(TARGETS bfgModelTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
