cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(SerializationTest "0.3.0")

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DTIXML_USE_STL)

ADD_EXECUTABLE(bfgSerializationTest ${SOURCES} ${HEADERS})

SET_TARGET_PROPERTIES(bfgSerializationTest PROPERTIES OUTPUT_NAME_DEBUG "bfgSerializationTest_d")

TARGET_LINK_LIBRARIES(bfgSerializationTest
	${Boost_LIBRARIES}
	${BoostLog_LIBRARIES}
	${OGRE_LIBRARIES}
	bfgBase
	bfgCore
	bfgEventCore
	bfgModel
	TinyXML
)

INSTALL(TARGETS bfgSerializationTest
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT devel
)
