cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(SynchronizationTest "0.3.0")

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MYGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DTIXML_USE_STL)

ADD_EXECUTABLE(bfgSynchronizationTest ${SOURCES} ${HEADERS})

SET_TARGET_PROPERTIES(bfgSynchronizationTest PROPERTIES OUTPUT_NAME_DEBUG "bfgSynchronizationTest_d")

TARGET_LINK_LIBRARIES(bfgSynchronizationTest
	bfgBase
	bfgController
	bfgCore
	bfgEventCore
	bfgModel
	bfgNetwork
	bfgPhysics
	bfgView
	${BoostLog_LIBRARIES}
	${Boost_LIBRARIES}
	${OIS_LIBRARIES}
	${OGRE_LIBRARIES}
	${MYGUI_LIBRARIES}
	${MYGUI_OGRE_LIBRARIES}
	ode
)

INSTALL(TARGETS bfgSynchronizationTest
        RUNTIME DESTINATION ${BFG_BIN_DIR}
        COMPONENT runtime)
