cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(WeaponTest)

FILE(GLOB SOURCES
	*.cpp
)

FILE(GLOB HEADERS
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MYGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DTIXML_USE_STL)

ADD_EXECUTABLE(bfgWeaponTest ${SOURCES} ${HEADERS})

SET_TARGET_PROPERTIES(bfgWeaponTest PROPERTIES OUTPUT_NAME_DEBUG "bfgWeaponTest_d")

TARGET_LINK_LIBRARIES(bfgWeaponTest
	${BoostLog_LIBRARIES}
	${Boost_LIBRARIES}
	${MYGUI_LIBRARIES}
	${MYGUI_OGRE_LIBRARIES}
	${ODE_LIBRARY}
	${OGRE_LIBRARIES}
	${OIS_LIBRARIES}
	bfgBase
	bfgController
	bfgCore
	bfgEventCore
	bfgModel
	bfgPhysics
	bfgView
)

INSTALL(TARGETS bfgWeaponTest
        RUNTIME DESTINATION ${BFG_BIN_DIR}
        COMPONENT runtime)
