cmake_minimum_required(VERSION 2.6)

BFG_INIT_PACKAGE(Leveler "0.1.0")

FILE(GLOB LEVELER_SOURCES 
	*.cpp
)

FILE(GLOB LEVELER_HEADERS 
	*.h
)

INCLUDE_DIRECTORIES(${BoostLog_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${OIS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${TINYXML_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MYGUI_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${MYGUI_OGRE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${BFG_ENGINE_INCLUDE_DIR})
INCLUDE_DIRECTORIES(..)	# For subdirectories
INCLUDE_DIRECTORIES(.)	# For subdirectories

ADD_DEFINITIONS(-DTIXML_USE_STL)

ADD_EXECUTABLE(bfgLeveler ${LEVELER_SOURCES} ${LEVELER_HEADERS})

SET_TARGET_PROPERTIES(bfgLeveler PROPERTIES OUTPUT_NAME_DEBUG "bfgLeveler_d")

TARGET_LINK_LIBRARIES(bfgLeveler
	bfgBase
	bfgController
	bfgCore
	bfgEventCore
	bfgModel
	bfgView
	TinyXML
	${BoostLog_LIBRARIES}
	${Boost_LIBRARIES}
	${OGRE_LIBRARIES}
	${MYGUI_LIBRARIES}
	${MYGUI_OGRE_LIBRARIES}
)

INSTALL(TARGETS bfgLeveler
	RUNTIME DESTINATION ${BFG_BIN_DIR}
	COMPONENT runtime)
